force-app/main/default/objects/Submissions__c/Submissions__c.object-meta.xml
<CustomObject>
    <label>Submission</label>
    <nameField>
        <label>Submissions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>