force-app/main/default/objects/Submissions__c/fields/Future_Bill_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Future_Bill_Submitted__c</fullName>
    <label>Future Bill Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>